# my-UVlayout

./: .gitignore  CMakeLists.txt  OpenNL_parameterization.cpp  README.md  gen_edges.cpp  gen_info.cpp  gen_obj.cpp  my_header.h  note.txt  packing.cpp  parameterization.cpp  segmentation.cpp  viewer.cpp  笔记.txt
